<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddToShoppingListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_to_shopping_prompt"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/newItemName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:fontFamily="casual"
            android:hint="@string/add_to_shopping_prompt_hint"
            android:imeOptions="actionDone|flagNavigateNext"
            android:inputType="textVisiblePassword"
            android:maxLength="24"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/how_much"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold|italic"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/newItemAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


        </LinearLayout>

        <RadioGroup
            android:id="@+id/unitTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:checkedButton="@id/radioButtonUnits"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonUnits"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/items"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonKilos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/kg"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonLiters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/liters"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonPacks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/packs"
                android:textSize="16sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:gravity="center"
                android:text="@string/add_picture"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75" />

            <ImageView
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:src="@drawable/ic_baseline_camera_black" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>