<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/sign_up_button"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>