<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="60dp"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/listName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/share_prompt"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">

        </Space>

        <EditText
            android:id="@+id/shareTargetEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:cursorVisible="false"
            android:fontFamily="casual"
            android:hint="@string/share_hint"
            android:imeOptions="actionDone|flagNavigateNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="24"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:paddingVertical="30dp">
            <Button
                android:id="@+id/closeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/blue_button"
                android:fontFamily="sans-serif-black"
                android:text="@string/close"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/blue_button"
                android:fontFamily="sans-serif-black"
                android:text="@string/share"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>


